2003-05-30  Andrew Lindeman  <joyoflinux@yahoo.com> 1.3.4-cvs-b53

	* Remove unnecessary function call

2003-05-30  Andrew Lindeman  <joyoflinux@yahoo.com> 1.3.4-cvs-b52

	* Make the select box in the config wizard default to whichever
	  image manipulation program it found (until now, it always defaulted
	  to NetPBM).

2003-05-30  Beckett Madden-Woods  <beckett@beckettmw.com> 1.3.4-cvs-b51

	* Patch #745960. Fixed $GALLERY_BASEDIR warning for publish_xp.php
	  (missed this one the first time around in -b25 fix).

2003-05-29  Beckett Madden-Woods  <beckett@beckettmw.com> 1.3.4-RC1

	* v1.3.4 Release Candidate 1

2003-05-29  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b50

	* Tweaked backup_albums.php so that it works with open_basedir enabled.

2003-05-29  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.4-cvs-b49

	* Moved backup_albums.php to setup, and removed it from albums.php

2003-05-29  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b48

	* UI fixes:
	  - Don't show [add photo] unless custom fields are activated, since
	    it isn't terribly useful without them and it clutters the admin
	    menu
	
	  - Roll the [edit summary] feature into the [properties] link for
	    admin menu brevity.

2003-05-28  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b47

	* Another fix to the AlbumItem versioning code.  Make sure that new
	  album items get the right album data version number, and that they
	  start off with a blank set of extra fields.  Bumped the album version
	  number one more time to make sure that everybody's data is clean.
	
2003-05-28  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b46

	* Tweaked the PhotoAccess affiliate ID

2003-05-28  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b45

	* Updated view_photo.php to use the appropriate affiliate ID 
	  for PhotoAccess

2003-05-28  Beckett Madden-Woods  <beckett@beckettmw.com> 1.3.4-cvs-b44

	* Undid -b43 and fixed the warning correctly. Bumped album version