@@ -1,3 +1,11 @@
+2003-05-30  Andrew Lindeman  <joyoflinux@yahoo.com> 1.3.4-cvs-b54
+
+	* Quote the filename given to the jhead parser.  This resolves a
+          bug related to spaces in files names.
+          
+        * Fix bug #550527, where double quotes in an album name would
+          cause HTML weirdness and end up being truncated
+
 2003-05-30  Andrew Lindeman  <joyoflinux@yahoo.com> 1.3.4-cvs-b53
 
 	* Remove unnecessary function call
